--- a/ARMdps/Views/Shared/_Layout.cshtml
+++ b/ARMdps/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="blue-header" style="display:flex;justify-content:space-between; font-size:18px;">
+        <div class="blue-header" style="display:flex;justify-content:space-between; font-size:18px; border-radius:0px 0px 12px 12px">
             <div style="display:flex; align-items:center; justify-content:center; flex-direction:column; padding-left: 5px;">
                 <span>Идентификатор системы:</span>
                 <span>1234-5678-9102-3254-5559</span>
